--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-node_modules/
-config.json
+# Linux
+*~
+*.swp
+
+# Windows
+Thumbs.db
+desktop.ini
+
+# Mac OS X
+.DS_Store
+._*
+
+# Composer
+/composer.phar
+/vendor
+
+# NPM
+themes/node_modules/
